# duncan

./: CMakeLists.txt  README.md
include/: Attributes.h  Feature.h  FeatureIndex.h  FeatureList.h  Index.h  Reader.h  tokenizer.h
libs/gmock/.svn/: all-wcprops  dir-prop-base  entries
libs/gmock/build-aux/.svn/: entries
libs/gmock/gtest/.svn/: all-wcprops  entries
libs/gmock/gtest/build-aux/.svn/: entries
libs/gmock/gtest/cmake/.svn/: all-wcprops  entries
libs/gmock/gtest/codegear/.svn/: entries
libs/gmock/gtest/include/.svn/: all-wcprops  entries
libs/gmock/gtest/m4/.svn/: entries
libs/gmock/gtest/make/.svn/: entries
libs/gmock/gtest/msvc/.svn/: entries
libs/gmock/gtest/samples/.svn/: all-wcprops  entries
libs/gmock/gtest/scripts/.svn/: entries
libs/gmock/gtest/src/.svn/: all-wcprops  entries
libs/gmock/gtest/test/.svn/: all-wcprops  entries
libs/gmock/gtest/xcode/.svn/: entries
libs/gmock/include/.svn/: all-wcprops  entries
libs/gmock/include/gmock/.svn/: all-wcprops  entries
libs/gmock/make/.svn/: entries
libs/gmock/msvc/.svn/: entries
libs/gmock/msvc/2005/.svn/: entries
libs/gmock/msvc/2010/.svn/: entries
libs/gmock/scripts/.svn/: all-wcprops  entries
libs/gmock/scripts/generator/.svn/: entries
libs/gmock/scripts/test/.svn/: entries
libs/gmock/src/.svn/: all-wcprops  entries
libs/gmock/test/.svn/: all-wcprops  entries
src/: Attribute.cpp  Attribute.h  Attributes.cpp  Feature.cpp  Feature.h  FeatureIndex.cpp  FeatureList.cpp  Index.cpp  Reader.cpp  Reader.h  Transcript.h  main.cpp  utils.cpp  utils.h
tests/: Attribute.cpp  Attributes.cpp  Feature.cpp  FeatureIndex.cpp  FeatureList.cpp  Index.cpp  Reader.cpp  Tree.cpp
(+15 files in other folders)
